# todo-mash

./: Cargo.toml  README.md  bacon.toml  bootstrap_neobrutalism.css  docker-compose.yml
src/: lib.rs  main.rs
src/controllers/: home.rs  mod.rs  todo_new.rs
src/models/: mod.rs  todo.rs
src/models/dao/: todo_list.rs
src/views/: footer.rs  head.rs  index.rs  mod.rs  todo_list.rs
