[package]
name = "todo-mash"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"
maud = "*"
string_from = "0.1.0"
redis = "0.29.2"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }